// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproChips > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-chips
    d-inline-block
  "
  id="modified-unique-id"
>
  <p class="
    amelipro-chips__text
    d-inline-block
    mb-0
  ">
    <span class="truncate-text">
      Modified text
    </span>
  </p>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="supprimer Modified text"
    class="
      amelipro-chips__btn
      ml-4
    "
    icon="closeNoCircle"
    iconbgcolor="transparent"
    iconcolor="ap-blue-darken-1"
    iconhoverbgcolor="transparent"
    iconhovercolor="ap-blue-darken-2"
    large="true"
    medium="false"
    small="false"
    title="supprimer Modified text"
    uniqueid="modified-unique-id-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
</div>
`;

exports[`AmeliproChips > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-chips
    d-inline-block
  "
  id="required-unique-id"
>
  <p class="
    amelipro-chips__text
    d-inline-block
    mb-0
  ">
    <span class="truncate-text">
      Required text
    </span>
  </p>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="supprimer Required text"
    class="
      amelipro-chips__btn
      ml-4
    "
    icon="closeNoCircle"
    iconbgcolor="transparent"
    iconcolor="ap-blue-darken-1"
    iconhoverbgcolor="transparent"
    iconhovercolor="ap-blue-darken-2"
    large="true"
    medium="false"
    small="false"
    title="supprimer Required text"
    uniqueid="required-unique-id-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
</div>
`;

exports[`AmeliproChips > render correctly 1`] = `
<div
  class="
    amelipro-chips
    d-inline-block
  "
  id="my-chip-id"
>
  <p class="
    amelipro-chips__text
    d-inline-block
    mb-0
  ">
    <span class="truncate-text">
      texte de la chip
    </span>
  </p>
  <button
    class="
      amelipro-chips__btn
      btn--icon
      elevation-0
      ml-4
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--icon
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    id="my-chip-id-btn"
    plain=""
    style="height: auto; width: auto;"
    title="supprimer texte de la chip"
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span
        class="d-sr-only"
        id="my-chip-id-btn-btn-label"
      >
        supprimer texte de la chip
      </span>
      <span
        class="
          amelipro-icon
          icon-custom
        "
        id="my-chip-id-btn-icon"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
            large
          "
          focusable="false"
          role="img"
          style="color: #00749C;"
        >
          <span>
            <svg
              aria-hidden="true"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="shape-color"
                d="M18 7.05L16.95 6L12 10.95L7.05 6L6 7.05L10.95 12L6 16.95L7.05 18L12 13.05L16.95 18L18 16.95L13.05 12L18 7.05Z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
    <!---->
    <!---->
  </button>
</div>
`;
